# BeforeDDLServer

./: .gitignore  CMakeLists.txt  README.md
include/: AccountServiceImpl.h  AliSmsSupport.h  Application.h  CmdLineParser.h  Config.h  ConfigBoostJsonSerialize.h  ConfigJsonSerialize.h  RedisConnection.h  SerializableObject.h  Util.h
proto/: Authority.grpc.pb.cc  Authority.grpc.pb.h  Authority.pb.cc  Authority.pb.h
src/: AccountServiceImpl.cpp  AliSmsSupport.cpp  Application.cpp  CmdLineParser.cpp  RedisConnection.cpp  SerializableObject.cpp  main.cpp
test/: CMakeLists.txt  tests.cpp
